// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem Render should render a plain list item 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.5rem;
  font-weight: 400;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
}

<div
    class="emotion-1"
  >
    <li
      class="emotion-0"
      color="colorText"
      data-paste-element="LIST_ITEM"
      font-size="fontSize30"
      font-weight="fontWeightNormal"
    >
      Children
    </li>
  </div>
</DocumentFragment>
`;

exports[`Ordered List Render should render a plain ordered list wrapper 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin-bottom: 1.5rem;
  font-weight: 400;
  margin-left: 1.5rem;
}

<div
    class="emotion-1"
  >
    <ol
      class="emotion-0"
      color="colorText"
      data-paste-element="ORDERED_LIST"
      font-size="fontSize30"
      font-weight="fontWeightNormal"
    >
      Children
    </ol>
  </div>
</DocumentFragment>
`;

exports[`Unordered List Render should render a plain unordered list wrapper 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.5rem;
  margin-bottom: 1.5rem;
  font-weight: 400;
  margin-left: 1.5rem;
}

<div
    class="emotion-1"
  >
    <ul
      class="emotion-0"
      color="colorText"
      data-paste-element="UNORDERED_LIST"
      font-size="fontSize30"
      font-weight="fontWeightNormal"
    >
      Children
    </ul>
  </div>
</DocumentFragment>
`;
